<resources>
    <string name="app_name">HumblrVSV</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="onboarding_texts_array1">
        <item>Welcome to Humblr</item>
        <item>SubHumblr</item>
        <item>Sare and save</item>
    </string-array>
    <string-array name="onboarding_texts_array2">
        <item>Communities of all kinds of interests are gathered here</item>
        <item>You can find new subs by interests and see the subs you are subscribed to</item>
        <item>The favorites tab stores bookmarks with comments and subs. You will find information about yourself in the profile</item>
    </string-array>
    <string name="separator_text">-</string>
    <string name="some_text">очень длинное описание сабреддита оырвалоывлаофывифывифив ываллоываыв ываыва ывафыва ывафыва фываф фывафыва ыфвафыв фывафывафвымыва ывывапывап</string>
    <string name="title_home">home</string>
    <string name="title_favourites">favorites</string>
    <string name="title_profile">profile</string>
    <string name="search_hint">search for…</string>
    <string name="no_connection">Check the network connection</string>
    <string name="login_via_reddit">Login</string>
    <string name="skip">Skip</string>
    <string name="ready">Ready</string>
    <string name="successful_authorization">Successful login</string>
    <string name="list_of_friends">List of Friends</string>
    <string name="clear_saved">Clear Saved</string>
    <string name="logout">Logout</string>
    <string name="karma">Karma: %1$d</string>
    <string name="user_id">Id: %1$s</string>
    <string name="followers">Followers: %1$d</string>
    <string name="auth_under_logo">Find like-minded people with Humblr</string>
    <string name="posts">Posts</string>
    <string name="subreddits">Subreddits</string>
    <string name="popular">Popular</string>
    <string name="new_">New</string>
</resources>